--- a/scripts/Crawford_abandonment_SI.Rmd
+++ b/scripts/Crawford_abandonment_SI.Rmd
@@ -29,6 +29,14 @@ citecolor: black
 ---
 \beginsupplement
 
+```{r render}
+# Save final PDF of SI for submission:
+rmarkdown::render("scripts/Crawford_abandonment_SI.Rmd",
+                  output_file = paste0(p_proj, "writing/", "Crawford_abandonment_SI.pdf"),
+                  output_format = "bookdown::pdf_document2")
+```
+
+
 ```{r load-packages-functions, eval = TRUE, echo = FALSE, include = FALSE}
 source("/Users/christophercrawford/Google_Drive/_Projects/abandonment_trajectories/scripts/0_start.R")
 # source(paste0(p_proj, "scripts/util/_util_master.R"))
